// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`System Lifecycle Golden Tests > Scenario 1: Organic Growth with Huge Tool Output & Images 1`] = `
{
  "finalProjection": [
    {
      "parts": [
        {
          "text": "System Instructions",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Ack.",
        },
        {
          "text": "Nice diagram.",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Can we refactor?",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Yes we can.",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "[Multi-Modal Blob (image/png, 0.01MB) degraded to text to preserve context window. Saved to: <MOCKED_DIR>]",
        },
      ],
      "role": "user",
    },
  ],
  "tokenTrajectory": [
    {
      "tokensAfterBackground": 12,
      "tokensBeforeBackground": 12,
      "turnIndex": 0,
    },
    {
      "tokensAfterBackground": 24,
      "tokensBeforeBackground": 24,
      "turnIndex": 1,
    },
    {
      "tokensAfterBackground": 20135,
      "tokensBeforeBackground": 20147,
      "turnIndex": 2,
    },
    {
      "tokensAfterBackground": 3347,
      "tokensBeforeBackground": 23155,
      "turnIndex": 3,
    },
    {
      "tokensAfterBackground": 98,
      "tokensBeforeBackground": 3045,
      "turnIndex": 4,
    },
  ],
}
`;

exports[`System Lifecycle Golden Tests > Scenario 2: Under Budget (No Modifications) 1`] = `
{
  "finalProjection": [
    {
      "parts": [
        {
          "text": "System Instructions",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Ack.",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Hello!",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Hi, how can I help?",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Please continue.",
        },
      ],
      "role": "user",
    },
  ],
  "tokenTrajectory": [
    {
      "tokensAfterBackground": 12,
      "tokensBeforeBackground": 12,
      "turnIndex": 0,
    },
    {
      "tokensAfterBackground": 24,
      "tokensBeforeBackground": 24,
      "turnIndex": 1,
    },
  ],
}
`;

exports[`System Lifecycle Golden Tests > Scenario 3: Async-Driven Background GC 1`] = `
{
  "finalProjection": [
    {
      "parts": [
        {
          "text": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Please continue.",
        },
      ],
      "role": "user",
    },
  ],
  "tokenTrajectory": [
    {
      "tokensAfterBackground": 37,
      "tokensBeforeBackground": 37,
      "turnIndex": 0,
    },
    {
      "tokensAfterBackground": 74,
      "tokensBeforeBackground": 74,
      "turnIndex": 1,
    },
    {
      "tokensAfterBackground": 111,
      "tokensBeforeBackground": 111,
      "turnIndex": 2,
    },
  ],
}
`;
